cleaned up code, re-fixed day view, minor improvements to day view  - clock changes (still needs options)   - moved updateClock to run when rest of schedule is updated   - removed seconds   - moved to top right of page   - changed color from green to gray   - cleaned up updateClock code  - removed update button (will probably run updateSchedule() when clock is clicked)  - made day view only appear on mobile (needs options)   - fixed "future week" warning appearning on the current week in day view   - updated warning message to reflect the fact that the user might not be viewing an entire week

--- a/style.css
+++ b/style.css
@@ -265,7 +265,20 @@ table{
 	padding: 0 5px 3px 0;
 }
 
+#currentTime{
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding-right: 7px;
+	padding-top: 5px;
+	font-size: 1.5em;
+	font-weight: bold;
+	letter-spacing: .05em;
+	color: #333;
+}
+
 #refresh{
+	display: none;
 	position: fixed;
 	top: 0;
 	right: 0;
@@ -284,14 +297,3 @@ table{
 	-ms-user-select: none;
 	user-select: none;
 }
-#CurrentTime{
-	font-size: 1.3em;
-	letter-spacing: .05em;
-	color: #006400;
-	font-weight: bold;
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding-left: 3px;
-	padding-top: 6px;
-	}
